--- a/traefik/Dockerfile
+++ b/traefik/Dockerfile
@@ -1,4 +1,3 @@
 FROM traefik
-WORKDIR traefik
-COPY traefik.yaml /etc/traefik/
-COPY dynamic/* /etc/traefik/dynamic/
+COPY /traefik/traefik.yaml /etc/traefik/
+COPY /traefik/dynamic/* /etc/traefik/dynamic/
