--- a/traefik/Dockerfile
+++ b/traefik/Dockerfile
@@ -1,4 +1,4 @@
 FROM traefik
-WORKDIR traefik
-COPY traefik.yaml /etc/traefik/
-COPY dynamic/* /etc/traefik/dynamic/
+WORKDIR /traefik
+COPY ./traefik.yaml /etc/traefik/
+COPY ./dynamic/* /etc/traefik/dynamic/
